# hectic

./: .stylish-haskell.yaml  CHANGELOG.md  README.md  hectic.cabal
app/: Data.hs  Main.hs
lib/: Data.hs  Query.hs
src/: Main.hs
tests/: DataSpec.hs  QuerySpec.hs  ScheduleSpec.hs
