cabal-version:      2.4
name:               hectic
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Khanh Hua
maintainer:         giakhanh2487@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable hectic-app
    -- Modules included in this executable, other than Main.
    main-is:  Main.hs

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.3.0
      , hectic
    ghc-options: -Wall
    hs-source-dirs:   src
    default-language: Haskell2010

library
    -- Modules included in this executable, other than Main.
    exposed-modules:
        Data
      , Query
    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.3.0
      , time ^>=1.9.2
    ghc-options: -Wall
    hs-source-dirs:   lib
    default-language: Haskell2010

test-suite spec
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    other-modules:
        DataSpec
      , ScheduleSpec
      , QuerySpec
    hs-source-dirs: tests
    ghc-options: -Wall
    build-depends:
        hectic
      , base ^>=4.14.3.0
      , hspec ==2.*
    default-language: Haskell2010
    build-tool-depends: hspec-discover:hspec-discover == 2.*